package com.dengdongqi.windowproducer.window.builder

/**
 * <pre>
 * Created by DengDongQi on 2021/4/22
 * 显示和关闭监听
 * </pre>
 */
interface OnShowDismissListener {
    fun onShow()
    fun onDismiss()
}